# gleseng

./: .gitignore  CMakeLists.txt  Makefile
include/: glactor.h  glmaterial.h  glprogram.h  glscene.h  glshader.h  glwin.h
src/: glscene.cpp  glwin.cpp  main.cpp
